--- a/content/pages/nft-art-shop.mdx
+++ b/content/pages/nft-art-shop.mdx
@@ -7,4 +7,4 @@ Here you can buy NFT art items by myself and my friends.
 
 ## Opensea Department
 
-<p><a target=_blank href=https://opensea.io/Hypenosis/created>https://opensea.io/Hypenosis/created</a></p>
+<p><a target="_blank" href="https://opensea.io/Hypenosis/created">https://opensea.io/Hypenosis/created</a></p>
