--- a/content/posts/nft-shop.mdx
+++ b/content/posts/nft-shop.mdx
@@ -1,6 +1,6 @@
 ---
-title: NFT art shop created
-description: NFT art for sale! Authors: myself and my friends.
+title: "NFT art shop created"
+description: "NFT art for sale! Authors: myself and my friends."
 date: "2023-06-18"
 ---
 
