Test a YAML fix

--- a/content/posts/nft-shop.mdx
+++ b/content/posts/nft-shop.mdx
@@ -4,4 +4,4 @@ description: "NFT art for sale! Authors: myself and my friends."
 date: "2023-06-18"
 ---
 
-Here is goes: click to enter our <a href="/nft-art-shop">NFT art shop</a>. `=)`
+Here is goes: click to enter our <a href="/nft-art-shop">NFT art shop</a>. =)
